# dal.cpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build_linux.sh  build_windows.bat
.github/workflows/: cmake-linux-clang-18.yml  cmake-linux-clang-19.yml  cmake-linux-gcc-13.yml  cmake-linux-gcc-14.yml
cmake/: Platform.cmake  RapidJSONConfig.cmake
dal/: CMakeLists.txt
dal/curve/: piecewiselinear.hpp
dal/indice/: fixings.cpp  index.hpp
dal/math/: ndarray.hpp  operators.hpp  rootfind.cpp  rootfind.hpp
dal/model/: factory.cpp  factory.hpp
dal/platform/: consts.hpp  platform.hpp
dal/protocol/: assetvalue.cpp  assetvalue.hpp  collateraltype.hpp  optiontype.hpp
dal/script/: simulation.hpp
dal/storage/: _repository.cpp  _repository.hpp  json.cpp
dal/string/: strings.hpp
dal/time/: date.hpp  datetime.hpp
dal/utilities/: numerics.cpp  numerics.hpp
examples/: CMakeLists.txt
examples/aad/: CMakeLists.txt  aad.cpp
examples/digital/: CMakeLists.txt  digital.cpp
examples/snowball/: snowball.cpp
examples/sobol/: sobol.cpp
examples/uoc/: uoc.cpp
examples/uoc_compiled/: uoc_compiled.cpp
examples/vanilla/: CMakeLists.txt  vanilla.cpp
public/auto/: MG_Interp1_New_Cubic_public.htm  MG_Interp1_New_Linear_public.htm
public/python/: setup.py
public/src/: value.cpp
tests/: CMakeLists.txt
tests/model/: test_blackscholes.cpp  test_dupire.cpp
tests/protocol/: test_assetvalue.cpp  test_underlying.cpp
tests/storage/: test__repository.cpp  test_audit.cpp  test_bag.cpp  test_box.cpp  test_globals.cpp  (+2 more)
(+22 files in other folders)
