add_subdirectory(aad)
add_subdirectory(digital)
add_subdirectory(concurrency)
add_subdirectory(european_mc)
add_subdirectory(european_fd)
add_subdirectory(matrix_perf)
add_subdirectory(snowball)
add_subdirectory(sobol)
add_subdirectory(script)
add_subdirectory(underdetermined)
add_subdirectory(uoc)
add_subdirectory(uoc_compiled)
add_subdirectory(vanilla)
